# superviseddescent

./: CMakeLists.txt  README.md  index.html  initial_cache.cmake.template  params.json
apps/: rcr-detect.cpp  rcr-track.cpp
apps/rcr/: CMakeLists.txt  rcr-detect.cpp  rcr-track.cpp  rcr-train-tracking.cpp  rcr-train.cpp
apps/rcr/data/: mean_ibug_lfpw_68.txt  rcr_eval.cfg  rcr_training_22.cfg
doc/: Doxyfile.in  annotated.html  classes.html  classsuperviseddescent_1_1_col_piv_householder_q_r_solver-members.html  classsuperviseddescent_1_1_col_piv_householder_q_r_solver.html  classsuperviseddescent_1_1_linear_regressor-members.html  classsuperviseddescent_1_1_linear_regressor.html  classsuperviseddescent_1_1_no_normalisation-members.html  classsuperviseddescent_1_1_no_normalisation.html  classsuperviseddescent_1_1_partial_piv_l_u_solver-members.html  classsuperviseddescent_1_1_partial_piv_l_u_solver.html  classsuperviseddescent_1_1_regressor-members.html  classsuperviseddescent_1_1_regressor.html  classsuperviseddescent_1_1_regulariser-members.html  classsuperviseddescent_1_1_regulariser.html  classsuperviseddescent_1_1_supervised_descent_optimiser-members.html  classsuperviseddescent_1_1_supervised_descent_optimiser.html  dir_1e4bb39cb70c36d30d49dd64dac15aa5.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d67317d39297237c47154e113f42f180.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  mat__cerealisation_8hpp_source.html  matserialisation_8hpp_source.html  namespaceboost.html  namespacecv.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesuperviseddescent.html  regressors_8hpp_source.html  superviseddescent_8hpp_source.html
doc/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_1.js  search.js  variables_0.js
examples/: CMakeLists.txt  hog.c  hog.h  landmark_detection.cpp  pose_estimation.cpp  simple_function.cpp
examples/data/ibug_lfpw_trainset/: image_0002.pts  image_0003.pts  image_0004.pts  image_0005.pts
examples/rcr/: CMakeLists.txt  adaptive_vlhog.hpp  eos_core_landmark.hpp  helpers.hpp  model.hpp  rcr-detect.cpp  rcr-track.cpp  rcr-train-tracking.cpp  rcr-train.cpp
include/rcr/: adaptive_vlhog.hpp  eos_core_landmark.hpp  eos_io_landmarks.hpp  helpers.hpp  hog.c  hog.h  landmark.hpp  landmarks_io.hpp  model.hpp
include/superviseddescent/: matcerealisation.hpp  matserialisation.hpp  regressors.hpp  superviseddescent.hpp  verbose_solver.hpp
include/superviseddescent/utils/: mat_serialization.hpp
test/: CMakeLists.txt  test_LinearRegressor1D.cpp  test_LinearRegressorND.cpp  test_SupervisedDescentOptimiser.cpp
tests/: CMakeLists.txt  test_SupervisedDescentOptimiser.cpp
